// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<styled.div>
  <styled.label />
  <styled.div>
    #000000
  </styled.div>
  <styled.div
    color="#000000"
    focus={false}
    onClick={[Function]}
  />
</styled.div>
`;

exports[`renders an initial color if provided 1`] = `
<styled.div>
  <styled.label />
  <styled.div>
    #FFF
  </styled.div>
  <styled.div
    color="#fff"
    focus={false}
    onClick={[Function]}
  />
</styled.div>
`;
